--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "dependencies": {
     "error": "~2.0.3",
-    "xtend": "~2.0.6"
+    "xtend": "~2.0.6",
+    "uuid": "~1.4.1"
   },
   "devDependencies": {
-    "tape": "~1.0.2"
+    "tape": "~1.0.4",
+    "continuable-mongo": "~0.6.1"
   },
   "licenses": [
     {
