--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   },
   "devDependencies": {
     "tape": "~1.0.4",
-    "continuable-mongo": "~0.6.1"
+    "continuable-mongo": "~0.6.2",
+    "optimist": "~0.6.0",
+    "level": "~0.15.0",
+    "level-sublevel": "~5.1.1"
   },
   "licenses": [
     {
