--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "error": "~2.0.3",
     "xtend": "~2.0.6",
     "uuid": "~1.4.1",
-    "level-delete-range": "~0.1.0"
+    "level-delete-range": "~0.1.0",
+    "dotty": "0.0.2",
+    "subindex": "0.0.5",
+    "level-sublevel": "~5.1.1"
   },
   "devDependencies": {
     "tape": "~1.0.4",
