--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evented-repository",
-  "version": "0.3.2",
+  "version": "0.3.2-level-as-arg",
   "description": "Repository interface for noSQL database",
   "keywords": [],
   "author": "Raynos <raynos2@gmail.com>",
